# esp32-firmware-platform

./: .gitignore  CMakeLists.txt  README.md  diagram.json  platformio.ini  sdkconfig.ci.cooperative  sdkconfig.ci.rtos
.github/workflows/: platformio.yml
artifacts/hardware/: esp32_fault_injection_log.txt  esp32_serial_log.txt
components/app_backends/: CMakeLists.txt
components/app_backends/include/: app_cooperative_backend.h  app_rtos_backend.h
components/app_backends/src/: app_cooperative_backend.cpp  app_rtos_backend.cpp
components/app_core/: CMakeLists.txt
components/app_core/include/: app_core.h  platform_hal.h
components/app_core/src/: app_core.cpp
components/platform_esp32s3/: CMakeLists.txt
components/platform_esp32s3/include/: board_xiao_esp32s3.h
components/platform_esp32s3/src/: firmware_hal_espidf.cpp  platform_hal_esp32s3.cpp
docs/: architecture.md  bare_metal_porting_notes.md  branch_protection.md  ci_evidence_map.md  design.md  evidence_map.md  failure_injection_behavior.md  fault_injection_matrix.md  hal_boundary.md  hardware_bringup.md  hardware_fault_injection.md  hardware_oscilloscope_trace.md  manufacturing_self_test.md  performance_optimization_evidence.md  runtime_health.md  simulation_plan.md  stress_mode.md  test_plan.md  timing_budget.md  timing_model.md  timing_notes.md  toolchain.md  validation_log.md  wiring.md
include/: app_config.h  app_state.h  button.h  fault_state.h  firmware_hal.h  gpio_registers.h  manufacturing_self_test.h  runtime_health.h  sample_request.h  sampling_timer.h  sensor.h  sensor_math.h  state_machine.h  stress_mode.h  telemetry.h  telemetry_format.h  time_utils.h  watchdog.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
scripts/: check_app_core_includes.sh  configure_required_checks.sh  parse_wokwi_telemetry.py  wokwi_runtime_check.sh
src/: app_state.cpp  button.cpp  fault_state.c  fault_state.cpp  firmware_hal.cpp  gpio_registers.cpp  main.cpp  manufacturing_self_test.cpp  runtime_health.cpp  sampling_timer.cpp  sensor.cpp  sensor_math.c  sensor_math.cpp  state_machine.c  stress_mode.cpp  telemetry.cpp  telemetry_format.c  telemetry_format.cpp  time_utils.c  watchdog.cpp
test/fakes/: fake_platform_hal.cpp  fake_platform_hal.h
test/test_app_core/: test_app_core.cpp
test/test_fault_state/: test_fault_state.cpp
test/test_integration/: test_integration.cpp
test/test_scheduler_timing/: test_scheduler_timing.cpp
test/test_sensor_math/: test_sensor_math.cpp
test/test_state_machine/: test_state_machine.cpp
test/test_telemetry_format/: test_telemetry_format.cpp
test/test_time_utils/: test_time_utils.cpp
