idf_component_register(
    SRCS
        "src/firmware_hal_espidf.cpp"
        "src/platform_hal_esp32s3.cpp"
    INCLUDE_DIRS
        "include"
        "../../include"
    REQUIRES
        app_core
        driver
        esp_adc
        esp_timer
        esp_system
)

target_compile_options(
    ${COMPONENT_LIB}
    PRIVATE
        -Wall
        -Wextra
        -Werror
        -Wshadow
)
